--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <div class="container">
       <header class="main-header">
         <a href="#">
-        <img src="http://placehold.it/150x100" alt="city of sedona" class="logo">
+          <img src="http://placehold.it/150x100" alt="city of sedona" class="logo">
         </a>
         <nav class="main-navigation">
           <ul>
@@ -25,15 +25,15 @@
             <legend>Инфраструктура:</legend>
             <ul>
               <li>
-                <input type="checkbox" name="pool" value="" id="pool" checked>
+                <input type="checkbox" name="pool" id="pool" checked>
                 <label for="pool">Басейн</label>
               </li>
               <li>
-                <input type="checkbox" name="parking" value="" id="parking">
+                <input type="checkbox" name="parking" id="parking">
                 <label for="parking">Парковка</label>
               </li>
               <li>
-                <input type="checkbox" name="wi-fi" value="" id="wi-fi">
+                <input type="checkbox" name="wi-fi" id="wi-fi">
                 <label for="wi-fi">wi-fi</label>
               </li>
             </ul>
@@ -73,64 +73,66 @@
         <div class="result">
           <h4>Найдено: 3</h4>
           <ul>
-            <li class="sort-description"><a href="#">Сортировка:</a></li>
+            <li class="sort-caption">Сортировка:</li>
             <li class="sort-item active"><a href="#">По цене</a></li>
             <li class="sort-item"><a href="#">По типу</a></li>
             <li class="sort-item"><a href="#">По рейтингу</a></li>
           </ul>
-          <button type="button" class="sort-up active"></button>
-          <button type="button" class="sort-down"></button>
+          <a href="#" class="sort-up active"></a>
+          <a href="#" class="sort-down"></a>
         </div>
-        <div class="hotel-info">
-          <img src="http://placehold.it/150x100" alt="Amara" />
-          <h3>Amara resort & spa</h3>
-          <p>
-            <span class="hotel-type">Гостиница</span> <span>от 3500 р.</span>
-          </p>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-        </div>
-        <div class="hotel-rating">
-          <ul class="stars">
-            <li><i class="icon-star"></i></li>
-            <li><i class="icon-star"></i></li>
-            <li><i class="icon-star"></i></li>
-            <li><i class="icon-star"></i></li>
-          </ul>
-          <span>Рейтинг: 8,5</span>
-        </div>
-        <div class="hotel-info">
-          <img src="http://placehold.it/150x100" alt="Amara" />
-          <h3>Desert Quail inn</h3>
-          <p>
-            <span class="motel-type">Мотель</span> <span>от 2000 р.</span>
-          </p>
+        <div class="hotels">
+          <div class="hotel-info">
+            <img src="http://placehold.it/150x100" alt="Amara" />
+            <h3>Amara resort & spa</h3>
+            <p>
+              <span class="hotel-type">Гостиница</span> <span>от 3500 р.</span>
+            </p>
             <a href="#">Подробнее</a>
             <a href="#">Забронировать</a>
-        </div>
+          </div>
+          <div class="hotel-rating">
+            <ul class="stars">
+              <li><i class="icon-star"></i></li>
+              <li><i class="icon-star"></i></li>
+              <li><i class="icon-star"></i></li>
+              <li><i class="icon-star"></i></li>
+            </ul>
+            <span>Рейтинг: 8,5</span>
+          </div>
+          <div class="hotel-info">
+            <img src="http://placehold.it/150x100" alt="Amara" />
+            <h3>Desert Quail inn</h3>
+            <p>
+              <span class="motel-type">Мотель</span> <span>от 2000 р.</span>
+            </p>
+              <a href="#">Подробнее</a>
+              <a href="#">Забронировать</a>
+          </div>
+            <div class="hotel-rating">
+              <ul>
+                <li><i class="icon-star"></i></li>
+                <li><i class="icon-star"></i></li>
+              </ul>
+              <span>Рейтинг: 8,9</span>
+            </div>
+          <div class="hotel-info">
+            <img src="http://placehold.it/150x100" alt="Amara" />
+            <h3>Villas at poco diablo</h3>
+            <p>
+              <span class="apartment-type">Апартаменты</span> <span>от 4000 р.</span>
+            </p>
+            <a href="#">Подробнее</a>
+            <a href="#">Забронировать</a>
+          </div>
           <div class="hotel-rating">
             <ul>
               <li><i class="icon-star"></i></li>
               <li><i class="icon-star"></i></li>
+              <li><i class="icon-star"></i></li>
             </ul>
-            <span>Рейтинг: 8,9</span>
+            <span>Рейтинг: 9,2</span>
           </div>
-        <div class="hotel-info">
-          <img src="http://placehold.it/150x100" alt="Amara" />
-          <h3>Villas at poco diablo</h3>
-          <p>
-            <span class="apartment-type">Апартаменты</span> <span>от 4000 р.</span>
-          </p>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-        </div>
-        <div class="hotel-rating">
-          <ul>
-            <li><i class="icon-star"></i></li>
-            <li><i class="icon-star"></i></li>
-            <li><i class="icon-star"></i></li>
-          </ul>
-          <span>Рейтинг: 9,2</span>
         </div>
       </main>
 
@@ -139,13 +141,13 @@
           #visitsedona
         </p>
         <ul class="social">
-          <li><a href="#"><img src="http://placehold.it/150x100" alt="tw" /></a></li>
-          <li><a href="#"><img src="http://placehold.it/150x100" alt="fb" /></a></li>
-          <li><a href="#"><img src="http://placehold.it/150x100" alt="you" /></a></li>
+          <li><a href="#"><img src="http://placehold.it/150x100" alt="tw"></a></li>
+          <li><a href="#"><img src="http://placehold.it/150x100" alt="fb"></a></li>
+          <li><a href="#"><img src="http://placehold.it/150x100" alt="you"></a></li>
         </ul>
-          <address class="autor">
-            <a href="#"> website by htmlacademy </a>
-          </address>
+        <address class="autor">
+          <a href="#"> website by htmlacademy </a>
+        </address>
       </footer>
     </div>
   </body>
