--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Hotels</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <header class="main-header">
         <a href="#">
-          <img src="http://placehold.it/150x100" alt="city of sedona" class="logo">
+          <img src="img/img_logo.jpg" alt="city of sedona" class="logo">
         </a>
         <nav class="main-navigation">
           <ul>
@@ -20,6 +21,7 @@
         </nav>
       </header>
       <main class="main-content">
+        <img src="img/img_banner_hotel.jpg" alt="Sedona">
         <form class="filters" action="index.html" method="post">
           <fieldset class="form-column">
             <legend>Инфраструктура:</legend>
@@ -70,7 +72,7 @@
         </form>
 
         <div class="result">
-          <h4>Найдено: 3</h4>
+          <h2>Найдено: 3</h2>
           <ul>
             <li class="sort-caption">Сортировка:</li>
             <li class="sort-item active"><a href="#">По цене</a></li>
@@ -82,7 +84,7 @@
         </div>
         <div class="hotels">
           <div class="hotel-info">
-            <img src="http://placehold.it/150x100" alt="Amara">
+            <img src="img/img_amara_hotel.jpg" alt="Amara">
             <h3>Amara resort & spa</h3>
             <p>
               <span class="hotel-type">Гостиница</span> <span>от 3500 р.</span>
@@ -100,7 +102,7 @@
             <span>Рейтинг: 8,5</span>
           </div>
           <div class="hotel-info">
-            <img src="http://placehold.it/150x100" alt="Amara">
+            <img src="img/img_desert_hotel.jpg" alt="Desert">
             <h3>Desert Quail inn</h3>
             <p>
               <span class="hotel-type">Мотель</span> <span>от 2000 р.</span>
@@ -116,7 +118,7 @@
             <span>Рейтинг: 8,9</span>
           </div>
           <div class="hotel-info">
-            <img src="http://placehold.it/150x100" alt="Amara">
+            <img src="img/img_villas_hotel.jpg" alt="Villas">
             <h3>Villas at poco diablo</h3>
             <p>
               <span class="hotel-type">Апартаменты</span> <span>от 4000 р.</span>
