--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Sedona</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <header="main-header">
-        <a href="index.html"><img src="http://placehold.it/150x100" alt="city of sedona" class="logo"></a>
+        <a href="index.html"><img src="img/img_logo.jpg" alt="city of sedona" class="logo"></a>
         <nav>
           <ul class="main-navigation">
             <li><a href="#">Информация</a></li>
@@ -18,7 +19,7 @@
         </nav>
       </header>
       <main class="main-content">
-        <img src="http://placehold.it/150x100" alt="" class="banner">
+        <img src="img/img_banner_index.jpg" alt="Sedona" class="banner">
         <div class="promo">
           <header>
             <h2>Седона - небольшой городок в аризоне, заслуживающий большего!</h2>
@@ -36,26 +37,26 @@
               </p>
             </div>
             <figure>
-              <img src="http://placehold.it/150x100" alt="">
+              <img src="img/img_first_reason_index.jpg" alt="">
             </figure>
           </div>
           <ul class="features">
             <li class="feature-housing">
-              <h4>Жилье</h4>
+              <h3>Жилье</h3>
               <p>
                 Рекомендуем пожить в настоящем мотеле,
                 все как в кино!
               </p>
             </li>
             <li class="feature-food">
-              <h4>Еда</h4>
+              <h3>Еда</h3>
               <p>
                 Всегда заказывайте фирменный бургер,
                 вы не разочаруетесь!
               </p>
             </li>
             <li class="feature-souvenirs">
-              <h4>Сувениры</h4>
+              <h3>Сувениры</h3>
               <p>
                 Не только китайского,
                 но и местного производства!
@@ -64,7 +65,7 @@
           </ul>
           <div class="media-block">
             <figure>
-              <img src="http://placehold.it/150x100" alt="">
+              <img src="img/img_second_reason_index.jpg" alt="">
             </figure>
             <div class="reason">
               <h3>Там есть мост дьявола</h3>
@@ -77,7 +78,7 @@
           </div>
           <ul class="reasons-list">
             <li class="reason">
-              <h4>Небольшая площадь</h4>
+              <h3>Небольшая площадь</h3>
               <p>- № 3 -</p>
               <p>
                 Все достопремечательности
@@ -85,7 +86,7 @@
               </p>
             </li>
             <li class="reason">
-              <h4>Красивая дорога</h4>
+              <h3>Красивая дорога</h3>
               <p>- № 4 -</p>
               <p>
                 Ехать в седону из Лас-Вегаса совсем
@@ -93,7 +94,7 @@
               </p>
             </li>
             <li class="reason">
-              <h4>Мало туристов</h4>
+              <h3>Мало туристов</h3>
               <p>- № 5 -</p>
               <p>
                 Большенство едет в Гранд Каньон и
@@ -103,13 +104,13 @@
           </ul>
           <div class="hotel-search">
             <header class="interested">
-              <h4>Заинтересовались?</h4>
+              <h1>Заинтересовались?</h1>
               <p>
                 Укажите предполагаемые даты поездки,
                 и мы покажем вам лучшие предложения гостиниц в седоне
               </p>
             </header>
-            <img src="http://placehold.it/150x100" alt="map">
+            <img src="img/img_map_index.jpg" alt="map">
             <div class="hotels-search">
               <h4>
                 Поиск гостиницы в седоне
@@ -118,24 +119,24 @@
                 <label for="check-in">Дата заезда:</label>
                 <div class="date-with-button">
                   <input type="date" id="check-in">
-                  <button type="button" class="calendar">
+                  <button type="button" class="calendar"></button>
                 </div>
                 <label for="check-out">Дата выезда:</label>
                 <div class="date-with-button">
                   <input type="date" id="check-out">
-                  <button type="button" class="calendar">
+                  <button type="button" class="calendar"></button>
                 </div>
                 <label for="adults-count">Взрослые:</label>
                 <div class="number-with-button">
-                  <button type="button" class="decrease-number">
+                  <button type="button" class="decrease-number"></button>
                   <input type="number" value="2" id="adults-count">
-                  <button type="button" class="increase-number">
+                  <button type="button" class="increase-number"></button>
                 </div>
                 <label for="childrens-count">Дети:</label>
                 <div class="number-with-button">
-                  <button type="button" class="decrease-number">
+                  <button type="button" class="decrease-number"></button>
                   <input type="number" value="0" id="childrens-count">
-                  <button type="button" class="increase-number">
+                  <button type="button" class="increase-number"></button>
                 </div>
                 <div class="buttons">
       				    <input type="submit" value="Найти">
@@ -156,7 +157,7 @@
           <li><a href="#"><i class="social-yout"></i></a></li>
         </ul>
         <address class="autor">
-          <a href="#"> website by htmlacademy </a>
+          <a href="#"> website by <img src="img/img_htmlacademy.jpg" alt="htmlacademy" /> </a>
         </address>
       </footer>
     </div>
