Графика и текстовые стили Седоны

--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
         </nav>
       </header>
       <main class="main-content">
-        <img src="img/img_banner_hotel.jpg" alt="Sedona">
+        <img src="img/hotels_sedona.jpg" width="1200" height="217" alt="Sedona">
         <form class="filters" action="index.html" method="post">
           <fieldset class="form-column">
             <legend>Инфраструктура:</legend>
@@ -84,7 +84,7 @@
         </div>
         <div class="hotels">
           <div class="hotel-info">
-            <img src="img/img_amara_hotel.jpg" alt="Amara">
+            <img src="img/img_amara_hotel.jpg" width="135" height="89" alt="Amara">
             <h3>Amara resort & spa</h3>
             <p>
               <span class="hotel-type">Гостиница</span> <span>от 3500 р.</span>
@@ -102,7 +102,7 @@
             <span>Рейтинг: 8,5</span>
           </div>
           <div class="hotel-info">
-            <img src="img/img_desert_hotel.jpg" alt="Desert">
+            <img src="img/img_desert_hotel.jpg" width="135" height="89" alt="Desert">
             <h3>Desert Quail inn</h3>
             <p>
               <span class="hotel-type">Мотель</span> <span>от 2000 р.</span>
@@ -118,7 +118,7 @@
             <span>Рейтинг: 8,9</span>
           </div>
           <div class="hotel-info">
-            <img src="img/img_villas_hotel.jpg" alt="Villas">
+            <img src="img/img_villas_hotel.jpg" width="135" height="89" alt="Villas">
             <h3>Villas at poco diablo</h3>
             <p>
               <span class="hotel-type">Апартаменты</span> <span>от 4000 р.</span>
