--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <header="main-header">
-        <a href="index.html"><img src="img/img_logo.jpg" alt="city of sedona" class="logo"></a>
+        <a href="index.html"><img src="img/img_logo.jpg" width="137" height="70" alt="city of sedona" class="logo"></a>
         <nav>
           <ul class="main-navigation">
             <li><a href="#">Информация</a></li>
@@ -19,7 +19,7 @@
         </nav>
       </header>
       <main class="main-content">
-        <img src="img/img_banner_index.jpg" alt="Sedona" class="banner">
+        <img src="img/index_sedona.jpg" width="1200" height="509" alt="Sedona" class="banner">
         <div class="promo">
           <header>
             <h2>Седона - небольшой городок в аризоне, заслуживающий большего!</h2>
@@ -37,7 +37,7 @@
               </p>
             </div>
             <figure>
-              <img src="img/img_first_reason_index.jpg" alt="">
+              <img src="img/img_first_reason_index.jpg" width="800" height="256" alt="">
             </figure>
           </div>
           <ul class="features">
@@ -65,7 +65,7 @@
           </ul>
           <div class="media-block">
             <figure>
-              <img src="img/img_second_reason_index.jpg" alt="">
+              <img src="img/img_second_reason_index.jpg" width="800" height="256" alt="">
             </figure>
             <div class="reason">
               <h3>Там есть мост дьявола</h3>
@@ -110,7 +110,7 @@
                 и мы покажем вам лучшие предложения гостиниц в седоне
               </p>
             </header>
-            <img src="img/img_map_index.jpg" alt="map">
+            <img src="img/img_map_index.jpg" width="1200" height="593" alt="map">
             <div class="hotels-search">
               <h4>
                 Поиск гостиницы в седоне
@@ -157,7 +157,7 @@
           <li><a href="#"><i class="social-yout"></i></a></li>
         </ul>
         <address class="autor">
-          <a href="#"> website by <img src="img/img_htmlacademy.jpg" alt="htmlacademy" /> </a>
+          <a href="#"> website by <img src="img/img_htmlacademy.jpg" width="113" height="39" alt="htmlacademy" /> </a>
         </address>
       </footer>
     </div>
