Графика и текстовые стили Седоны 2

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Hotels</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="container">
@@ -147,7 +148,7 @@
           <li><a href="#"><img src="http://placehold.it/150x100" alt="you"></a></li>
         </ul>
         <address class="autor">
-          <a href="#"> website by htmlacademy </a>
+          <a href="#"> website by <img src="img/img_htmlacademy.jpg" width="113" height="39" alt="htmlacademy"> </a>
         </address>
       </footer>
     </div>
