--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Sedona</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="container">
@@ -157,7 +158,7 @@
           <li><a href="#"><i class="social-yout"></i></a></li>
         </ul>
         <address class="autor">
-          <a href="#"> website by <img src="img/img_htmlacademy.jpg" width="113" height="39" alt="htmlacademy" /> </a>
+          <a href="#"> website by <img src="img/img_htmlacademy.jpg" width="113" height="39" alt="htmlacademy"> </a>
         </address>
       </footer>
     </div>
