--- a/catalog.html
+++ b/catalog.html
@@ -4,25 +4,24 @@
     <meta charset="utf-8">
     <title>Hotels</title>
     <link href="css/style.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="container">
       <header class="main-header">
-        <a href="#">
-          <img src="img/img_logo.jpg" alt="city of sedona" class="logo">
+        <a href="#" class="logo">
+          <img src="img/img_logo_sedona.png" alt="city of sedona">
         </a>
-        <nav class="main-navigation">
-          <ul>
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Фото и видео</a></li>
-            <li><a href="#">Карта штата</a></li>
-            <li><a href="#">Гостиницы</a></li>
+        <nav>
+          <ul class="main-navigation">
+            <li class="left first"><a href="#">Информация</a></li>
+            <li class="left second"><a href="#">Фото и видео</a></li>
+            <li class="right third"><a href="#">Карта штата</a></li>
+            <li class="right fourth"><a href="#">Гостиницы</a></li>
           </ul>
         </nav>
       </header>
-      <main class="main-content">
-        <img src="img/hotels_sedona.jpg" width="1200" height="217" alt="Sedona">
+      <main class="main-content clearfix">
         <form class="filters" action="index.html" method="post">
           <fieldset class="form-column">
             <legend>Инфраструктура:</legend>
@@ -73,7 +72,7 @@
         </form>
 
         <div class="result">
-          <h2>Найдено: 3</h2>
+          <h2 class="find">Найдено: 3</h2>
           <ul>
             <li class="sort-caption">Сортировка:</li>
             <li class="sort-item active"><a href="#">По цене</a></li>
@@ -83,9 +82,9 @@
           <a href="#" class="sort-up active"></a>
           <a href="#" class="sort-down"></a>
         </div>
-        <div class="hotels">
+        <div class="hotel clearfix">
           <div class="hotel-info">
-            <img src="img/img_amara_hotel.jpg" width="135" height="89" alt="Amara">
+            <img src="img/img_amara_hotel.jpg" width="135" height="89" alt="Amara" class="hotel-img">
             <h3>Amara resort & spa</h3>
             <p>
               <span class="hotel-type">Гостиница</span> <span>от 3500 р.</span>
@@ -102,8 +101,10 @@
             </ul>
             <span>Рейтинг: 8,5</span>
           </div>
+        </div>
+        <div class="hotel clearfix">
           <div class="hotel-info">
-            <img src="img/img_desert_hotel.jpg" width="135" height="89" alt="Desert">
+            <img src="img/img_desert_hotel.jpg" width="135" height="89" alt="Desert" class="hotel-img">
             <h3>Desert Quail inn</h3>
             <p>
               <span class="hotel-type">Мотель</span> <span>от 2000 р.</span>
@@ -118,8 +119,10 @@
             </ul>
             <span>Рейтинг: 8,9</span>
           </div>
+        </div>
+        <div class="hotel clearfix">
           <div class="hotel-info">
-            <img src="img/img_villas_hotel.jpg" width="135" height="89" alt="Villas">
+            <img src="img/img_villas_hotel.jpg" width="135" height="89" alt="Villas" class="hotel-img">
             <h3>Villas at poco diablo</h3>
             <p>
               <span class="hotel-type">Апартаменты</span> <span>от 4000 р.</span>
@@ -138,17 +141,17 @@
         </div>
       </main>
 
-      <footer class="main-footer">
+      <footer class="main-footer-catalog">
         <p>
           #visitsedona
         </p>
         <ul class="social">
-          <li><a href="#"><img src="http://placehold.it/150x100" alt="tw"></a></li>
-          <li><a href="#"><img src="http://placehold.it/150x100" alt="fb"></a></li>
-          <li><a href="#"><img src="http://placehold.it/150x100" alt="you"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
         </ul>
         <address class="autor">
-          <a href="#"> website by <img src="img/img_htmlacademy.jpg" width="113" height="39" alt="htmlacademy"> </a>
+          <a href="#"> website by <img src="img/img_htmlacademy.png" width="113" height="39" alt="htmlacademy"> </a>
         </address>
       </footer>
     </div>
